feat: remove external user id constructor